--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "easycorp/easyadmin-bundle": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "stripe/stripe-php": "^7.100",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
